# goldensunvst

./: .gitignore  CMakeLists.txt  GoldenSunVST.jucer  README.md
.github/workflows/: build-macos.yml  build-windows.yml  build.yml
GS/: GSPresets.cpp  GSPresets.h  GSReverb.cpp  GSReverb.h  GSSynths.cpp  GSSynths.h
GUI/: ControlsTab.cpp  ControlsTab.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  LevelMeter.cpp  LevelMeter.h  MainWindow.cpp  MainWindow.h  OverviewTab.cpp  OverviewTab.h  PresetCombo.cpp  PresetCombo.h  PropertyListener.h  SettingsWindow.cpp  SettingsWindow.h  SliderEx.cpp  SliderEx.h
Presets/: Presets.cpp  Presets.h  PresetsHandler.cpp  PresetsHandler.h
Processor/: ChannelState.cpp  ChannelState.h  Instrument.cpp  Instrument.h  Processor.cpp  Processor.h  ReverbEffect.cpp  ReverbEffect.h  SampleInstrument.cpp  SampleInstrument.h  Types.h
Source/GS/: GSPresets.cpp  GSPresets.h  GSReverb.cpp  GSReverb.h  GSSynths.cpp  GSSynths.h
Source/GUI/: AboutWindow.cpp  AboutWindow.h  ControlsTab.cpp  ControlsTab.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  LevelMeter.cpp  LevelMeter.h  MainWindow.cpp  MainWindow.h  OverviewTab.cpp  OverviewTab.h  PresetCombo.cpp  PresetCombo.h  PropertyListener.h  SettingsWindow.cpp  SettingsWindow.h  SliderEx.cpp  SliderEx.h
Source/JuceGenerated/: BinaryData.cpp  BinaryData.h  JuceHeader.h
Source/JuceModified/: juce_audio_plugin_client_VST3_Modified.cpp  juce_audio_plugin_client_VST3_Modified.mm
Source/Presets/: CGBSynthPresets.cpp  CGBSynthPresets.h  Presets.cpp  Presets.h  PresetsHandler.cpp  PresetsHandler.h
Source/Processor/: CGBChannel.cpp  CGBChannel.h  ChannelState.cpp  ChannelState.h  Instrument.cpp  Instrument.h  Processor.cpp  Processor.h  RPNHandler.cpp  RPNHandler.h  Resampler.cpp  Resampler.h  ReverbEffect.cpp  ReverbEffect.h  SampleInstrument.cpp  SampleInstrument.h  Types.h
Source/Resources/: presets_info.xml
